<resources>
    <string name="no_authority_auth" />
    <string name="wrong_fill_auth">Неверная почта или пароль, попробуйте снова.</string>
    <string name="no_connection_auth">Ошибка авторизации, проверьте интернет соединение.</string>
    <string name="no_fills_auth">Почта и пароль должны быть заполнены!</string>
    <string name="no_email_auth">Пожалуйста, введите ваш email.</string>
    <string name="no_fills">Поля пустые!</string>
    <string name="no_ps_auth">Пожалуйста, введите ваш пароль.</string>
    <string name="app_name">Внеурочка</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="reg_btn">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="reg_login">Придумайте логин</string>
    <string name="reg_email">Вставьте свою почту</string>
    <string name="reg_ps">Придумайте пароль</string>
    <string name="rpt_password">Повторите пароль</string>
    <string name="login">Имя пользователя</string>
    <string name="already_signed_up">Уже зарегестрированы?</string>
    <string name="regged_textView">Уже есть аккаунт?</string>
    <string name="regged_btn">ВОЙТИ В АККАУНТ</string>
    <string name="greeting">Добро пожаловать</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="authorize">ВОЙТИ</string>
    <string name="new_user">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="profile">Профиль пользователя</string>
    <string name="search">Поиск</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="ch_ps">Сбросить пароль</string>
    <string name="no_login_reg">Пожалуйста придумайте логин</string>
    <string name="no_email_reg">Пожалуйста вставьте свою почту</string>
    <string name="no_ps_reg">Пожалуйста придумайте пароль</string>
    <string name="dig_email">Почта не может начинаться с цифры.</string>
    <string name="len_email">Длина почты должна быть от 5 символов.</string>
    <string name="dig_ps">Пароль не может начинаться с цифры.</string>
    <string name="len_ps">Длина пароля должна быть от 8 символов.</string>
    <string name="ps_no_mch">Пароли не совпадают!</string>
    <string name="acc_done">Аккаунт создан</string>
    <string name="error">"Ошибка : "</string>
</resources>