<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fone"
    android:paddingTop="?attr/actionBarSize"
    tools:context=".view.ui.SignUpActivity">

    <FrameLayout
        android:id="@+id/frame_layout_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="#fff"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/scroll_view_reg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center_vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="1dp"
                    android:text="@string/registration"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/convergence"
                    android:paddingStart="6dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/reg_login"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/reg_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints=""
                    android:drawablePadding="30dp"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A8BC"
                    android:textCursorDrawable="@color/black"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/convergence"
                    android:paddingStart="6dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/reg_email"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/reg_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints=""
                    android:drawablePadding="30dp"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A8BC"
                    android:textCursorDrawable="@color/black"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/convergence"
                    android:paddingStart="6dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/reg_ps"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/reg_ps"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints=""
                    android:drawablePadding="30dp"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A8BC"
                    android:textCursorDrawable="@color/black"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:fontFamily="@font/convergence"
                    android:paddingStart="6dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="2dp"
                    android:text="@string/reg_rpt_ps"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/reg_rpt_ps"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints=""
                    android:drawablePadding="30dp"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A8BC"
                    android:textCursorDrawable="@color/black"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/reg_btn"
                    style="@style/ThemeOverlay.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/purple_8000"
                    android:fontFamily="@font/concert_one"
                    android:gravity="center"
                    android:paddingBottom="2dp"
                    android:text="@string/reg_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/convergence"
                        android:gravity="center"
                        android:paddingStart="5dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="2dp"
                        android:text="@string/regged_textView"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:id="@+id/regged_btn"
                        style="@style/ThemeOverlay.Material3.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="25dp"
                        android:backgroundTint="@color/purple_8000"
                        android:fontFamily="@font/concert_one"
                        android:gravity="center"
                        android:paddingBottom="2dp"
                        android:text="@string/regged_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>